[tool.poetry]
name = "grailed_api"
version = "0.1.4"
description = "API exposes most important Grailed API endpoints"
authors = ["pznamir00 <pznamir00@gmail.com>"]
readme = "README.md"
keywords = ["grailed", "api", "python", "python3"]

[tool.poetry.urls]
Homepage = "https://github.com/pznamir00/Grailed-API"
Issues = "https://github.com/pznamir00/Grailed-API/issues"

[tool.poetry.dependencies]
python = "^3.8"
aenum = "3.1.15"
requests = "2.32.3"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
